--- a/TaskPerformance/TaskPerformance.csproj
+++ b/TaskPerformance/TaskPerformance.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CalculatorPrivateAssembly">
+      <HintPath>..\CalculatorPrivateAssembly\obj\Debug\CalculatorPrivateAssembly.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
